--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <html>
-    <body>
-        <h1>This is the Main Heading</h1>
-        <p>This text might be an introduction to the rest of
-            the page. And of the page is a long one it might
-            be split up into several sub-headings.  </p>
-        <h2>This is a Sub-Heading</h2>
-        <p>Many long articles have sub-headins so to help
-            you follow the structure of what is being written.
-            There may even be sub-sub-headings (or lower-level
-            headings).
-        </p>
-        <h2>Another Sub-Heading</h2>
-        <p lang="fr">Here you can see another sub-heading</p>
-    </body>
+<head>
+		 <title>Text</title>
+</head>
+<body>
+		 <h1>The Story in the Book</h1>
+		 <h2>Chapter 1</h2>
+		 <p>Molly had been staring out of her window for about
+			 an hour now. On her desk, lying between the copies
+			 of <i>Nature</i>, <i>New Scientist</i>, and all
+			 the other scientific journals her work had
+			 appeared in, was a well thumbed copy of <cite>On
+			 The Road</cite>. It had been Molly's favorite book
+			 since college, and the longer she spent in these
+			 four walls the more she felt she needed to be
+			 free.</p>
+		 <p>She had spent the last ten years in this room,
+			 sitting under a poster with an Oscar Wilde quote
+			 proclaiming that <q>Work is the refuge of
+			 people who have nothing better to do</q>. Although
+			 many considered her pioneering work, unraveling
+			 the secrets of the llama <abbr
+			 title="Deoxyribonucleic acid">DNA</abbr>, to be an
+			 outstanding achievement, Molly <em>did</em> think
+			 she had something better to do.</p>
+</body>
 </html>
