--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
-<html>
+<html lang="en">
 <head>
-		 <title>Text</title>
+    <meta charset="UTF-8">
+    <title>My Home Page</title>
+    <meta name="description" content="Introduction to HTML and CSS"/>
+    <meta name="author" content="Henok A. Haile"/>
+    <meta name="Keywords" content="HTML"/>
+    <link rel="stylesheet" media="screen" href="index.css">
 </head>
-<body>
-		 <h1>The Story in the Book</h1>
-		 <h2>Chapter 1</h2>
-		 <p>Molly had been staring out of her window for about
-			 an hour now. On her desk, lying between the copies
-			 of <i>Nature</i>, <i>New Scientist</i>, and all
-			 the other scientific journals her work had
-			 appeared in, was a well thumbed copy of <cite>On
-			 The Road</cite>. It had been Molly's favorite book
-			 since college, and the longer she spent in these
-			 four walls the more she felt she needed to be
-			 free.</p>
-		 <p>She had spent the last ten years in this room,
-			 sitting under a poster with an Oscar Wilde quote
-			 proclaiming that <q>Work is the refuge of
-			 people who have nothing better to do</q>. Although
-			 many considered her pioneering work, unraveling
-			 the secrets of the llama <abbr
-			 title="Deoxyribonucleic acid">DNA</abbr>, to be an
-			 outstanding achievement, Molly <em>did</em> think
-			 she had something better to do.</p>
-</body>
+    <body>
+        <img src="me/me.jpg" alt=""
+            title="Blue wallpaper" height="300" alt="my picture" />
+            <h1>Henok A. Haile</h1>
+            <ul>
+                <li><a href="index.html">Lab-01: HomePage</a></li>
+                <li><a href="indexX.html">Lab-02: About Me</a></li>                
+            </ul>
+            <a href="https://validator.w3.org/check/referer">
+                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+            </a>
+    </body>
 </html>
