added DOCTYPE and rem duplicate alt on index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
     <link rel="stylesheet" media="screen" href="index.css">
 </head>
     <body>
-        <img src="me/me.jpg" alt=""
+        <img src="me/me.jpg"
             title="Blue wallpaper" height="300" alt="my picture" />
             <h1>Henok A. Haile</h1>
             <ul>
