--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="indexX.html">Lab-02: About Me</a></li>                
             </ul>
             <a href="https://validator.w3.org/check/referer">
-                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+                <img src="https://garethrees.org/2009/02/07/validate/valid-xhtml10-blue.png" width=80 alt="html validator"/>
             </a>
     </body>
 </html>
