validator added to lab2

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -57,9 +57,10 @@
         <li>Shizy: <em>Funny</em> and likes to talk and he likes football.</li>
     </ul>
     <a href="https://validator.w3.org/check/referer"> <img
-        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" /></a>
-<a href="https://jigsaw.w3.org/css-validator/check/referer">
-    <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!" /></a>
+        src="../icons/htmlV.gif" alt="html validator" /></a>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img src="../icons/cssV.gif" width=80 alt="html validator"/>
+        </a>
     <a href="../index.html">Home</a>
         </body>
    
