--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Home Page</title>
+    <link href="index.css" type="text/css" rel="stylesheet" >
     <meta name="description" content="Introduction to HTML and CSS"/>
     <meta name="author" content="Henok A. Haile"/>
     <meta name="Keywords" content="HTML"/>
-    <link rel="stylesheet" media="screen" href="index.css">
 </head>
     <body>
         <img src="me/me.jpg"
@@ -14,10 +14,10 @@
             <h1>Henok A. Haile</h1>
             <ul>
                 <li><a href="index.html">Lab-01: HomePage</a></li>
-                <li><a href="indexX.html">Lab-02: About Me</a></li>                
+                <li><a href="aboutme/aboutme.html">Lab-02: About Me</a></li>                
             </ul>
             <a href="https://validator.w3.org/check/referer">
-                <img src="https://garethrees.org/2009/02/07/validate/valid-xhtml10-blue.png" width=80 alt="html validator"/>
+                <img src="icons/htmlV.gif" width=80 alt="html validator"/>
             </a>
     </body>
 </html>
