--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Lab-01: HomePage</a></li>
                 <li><a href="aboutme/aboutme.html">Lab-02: About Me</a></li>                
                 <li><a href="cszenlab/cszenlab.html">Lab-03: CSZengarden</a></li>
+                <li><a href="Lab04/workshoRegistration.html">Lab-04: >Workshop Registration</a></li>
             </ul>
             <a href="https://validator.w3.org/check/referer">
                 <img src="icons/htmlV.gif" width=80 alt="html validator"/>
