--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="aboutme/aboutme.html">Lab-02: About Me</a></li>                
                 <li><a href="cszenlab/cszenlab.html">Lab-03: CSZengarden</a></li>
                 <li><a href="lab04/workshopRegistration.html">Lab-04: Workshop Registration</a></li>
+                <li><a href="functions/functions.html">Lab-05: JS Functions</a></li>
             </ul>
             <a href="https://validator.w3.org/check/referer">
                 <img src="icons/htmlV.gif" width=80 alt="html validator"/>
