--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="cszenlab/cszenlab.html">Lab-03: CSZengarden</a></li>
                 <li><a href="lab04/workshopRegistration.html">Lab-04: Workshop Registration</a></li>
                 <li><a href="functions/functions.html">Lab-05: JS Functions</a></li>
+                <li><a href="decorate/decoratemytext.html">Lab-06: Decorate My Text</a></li>
             </ul>
             <a href="https://validator.w3.org/check/referer">
                 <img src="icons/htmlV.gif" width=80 alt="html validator"/>
