--- a/js/index.html
+++ b/js/index.html
@@ -7,21 +7,21 @@
 </head>
 <body>
     <h1>Welcome to JavaScript Programming</h1>
-    <input id="output" type= "text" value="replace me" />
+    <input id="output" name="txtbox" type= "text" value="replace me" />
     
     <!--1control is button.......2event is onclick.....3function is pop-->
     <!--3function is event handler-->
     <!--2 onclick is attrbute of many HTML-->
     <button id="button" onclick= "pop();">Click Me!</button>
 
-    <script src="wap.js" ></script>
+    <script src="index.js" ></script>
 </body>
 </html>
 
 
 
 <!--Purpose of most JS code is to manipulate the HTML DOM, which is set
-of JS objects that represent each element on an HTML page-->
+of JS objects that represent each element of an HTML page-->
 <!--examining element's state-->
 <!--change state-->
 <!--Change style-->
