--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="lab04/workshopRegistration.html">Lab-04: Workshop Registration</a></li>
                 <li><a href="functions/functions.html">Lab-05: JS Functions</a></li>
                 <li><a href="decorate/decoratemytext.html">Lab-06: Decorate My Text</a></li>
-                <li><a href="animation/animation.html">Lab-06: ASCII Animation</a></li>
+                <li><a href="animation/ascii.html">Lab-06: ASCII Animation</a></li>
             </ul>
             <a href="https://validator.w3.org/check/referer">
                 <img src="icons/htmlV.gif" width=80 alt="html validator"/>
