--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="decorate/decoratemytext.html">Lab-06: Decorate My Text</a></li>
                 <li><a href="animation/ascii.html">Lab-07: ASCII Animation</a></li>
                 <li><a href="inheritance/test.html">Lab-08: Inheritance</a></li>
+                <li><a href="maze/maze.html">Lab09: Maze</a></li>
             </ul>
             <a href="https://validator.w3.org/check/referer">
                 <img src="icons/htmlV.gif" width=80 alt="html validator"/>
